--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayDataActivity">
+    tools:context=".ble.DisplayDataActivity">
 
 
     <com.google.android.material.chip.ChipGroup
