DisplayDataActivity RecyclerView works

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,9 @@
         </item>
         <item name="android:statusBarColor">@color/white</item>
     </style>
+
+    <style name="progressBarBlue" parent="@style/Theme.AppCompat">
+        <item name="colorAccent">@color/blue_500</item>
+    </style>
+
 </resources>
